--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
     "strict": false,
     "strictNullChecks": true,
     "forceConsistentCasingInFileNames": true,
-    "noEmit": false, // Изменено
+    "noEmit": false, 
     "incremental": true,
     "jsx": "preserve",
     "module": "esnext",
