--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lint:fix": "cross-env NODE_OPTIONS=--no-deprecation next lint --fix",
     "payload": "cross-env NODE_OPTIONS=--no-deprecation payload",
     "reinstall": "cross-env NODE_OPTIONS=--no-deprecation rm -rf node_modules && rm pnpm-lock.yaml && pnpm --ignore-workspace install",
+    "migrate:folders": "node src/scripts/migrate-folders-fullpath.js",
+    "prestart": "npm run migrate:folders",
     "start": "concurrently \"cross-env NODE_OPTIONS=--no-deprecation next start\" \"npx tsx src/scripts/initScripts.ts\""
   },
   "dependencies": {
